; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_input.c_vlclua_player_seek_by_time_.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_input.c_vlclua_player_seek_by_time_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VLC_PLAYER_SEEK_PRECISE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @vlclua_player_seek_by_time_ to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_player_seek_by_time_(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @luaL_checkinteger(i32* %8, i32 1)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @VLC_TICK_FROM_US(i32 %10)
  store i32 %11, i32* %6, align 4
  %12 = load i32*, i32** %3, align 8
  %13 = call i32* @vlclua_get_player_internal(i32* %12)
  store i32* %13, i32** %7, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = call i32 @vlc_player_Lock(i32* %14)
  %16 = load i32*, i32** %7, align 8
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* @VLC_PLAYER_SEEK_PRECISE, align 4
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @vlc_player_SeekByTime(i32* %16, i32 %17, i32 %18, i32 %19)
  %21 = load i32*, i32** %7, align 8
  %22 = call i32 @vlc_player_Unlock(i32* %21)
  ret i32 0
}

declare dso_local i32 @luaL_checkinteger(i32*, i32) #1

declare dso_local i32 @VLC_TICK_FROM_US(i32) #1

declare dso_local i32* @vlclua_get_player_internal(i32*) #1

declare dso_local i32 @vlc_player_Lock(i32*) #1

declare dso_local i32 @vlc_player_SeekByTime(i32*, i32, i32, i32) #1

declare dso_local i32 @vlc_player_Unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
